--- a/src/linear_algebra/ch1.ipynb
+++ b/src/linear_algebra/ch1.ipynb
@@ -35,8 +35,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "44aa3a26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4, 5, 3, 4, 5]\n",
+      "[ 6  8 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "s= 2\n",
+    "a= [3,4,5]\n",
+    "b=np.array(a)#np배열\n",
+    "print(a*s)\n",
+    "print(b*s)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "cd626a5b",
+   "id": "7c0cc709",
    "metadata": {},
    "outputs": [],
    "source": []
