--- a/src/linear_algebra/ch1.ipynb
+++ b/src/linear_algebra/ch1.ipynb
@@ -119,8 +119,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "32832681-228a-42b9-ae50-66fe9ee1dc35",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((6-13)  % 19)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c655f8f6-ccf0-4b3a-afe9-60bdfa02d354",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -128,9 +146,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Rust",
-   "language": "rust",
-   "name": "rust"
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -139,7 +157,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "rust",
+   "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.6"
