--- a/src/linear_algebra/ch1.ipynb
+++ b/src/linear_algebra/ch1.ipynb
@@ -137,8 +137,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c655f8f6-ccf0-4b3a-afe9-60bdfa02d354",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[14, 15, 16],\n",
+       "       [24, 25, 26],\n",
+       "       [34, 35, 36]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v= np.array([[4,5,6]])\n",
+    "w= np.array([[10,20,30]]).T #열벡터\n",
+    "v+w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85faf50b-d3a7-4e5b-84ae-ded94df7610d",
    "metadata": {},
    "outputs": [],
    "source": []
