--- a/src/linear_algebra/ch1.ipynb
+++ b/src/linear_algebra/ch1.ipynb
@@ -162,8 +162,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "85faf50b-d3a7-4e5b-84ae-ded94df7610d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 8])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = 2\n",
+    "v = np.array([3,6])\n",
+    "s+v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8617dd74-493f-492b-a276-0f36515ae8d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[11, 21],\n",
+       "       [12, 22],\n",
+       "       [13, 23]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "v= np.array([[1,2,3]]).T #열벡터\n",
+    "w= np.array([[10,20]]) #행벡터\n",
+    "v+w #브로드캐스팅 덧셈"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a64c74dc-ffbd-41e3-b299-cefe5c69f860",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e538373f-dcf5-464e-84ad-15448af6f58f",
    "metadata": {},
    "outputs": [],
    "source": []
