--- a/src/linear_algebra/ch1.ipynb
+++ b/src/linear_algebra/ch1.ipynb
@@ -68,6 +68,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3d9dbe8c-4484-4230-b4b7-e4b71f153683",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 8])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "s= 2\n",
+    "v= np.array([3,6])\n",
+    "s+v\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "789f882d-6feb-4960-b460-1722d6acb4bc",
    "metadata": {},
@@ -211,16 +236,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a64c74dc-ffbd-41e3-b299-cefe5c69f860",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "14.422205101855956\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "v= np.array([1,2,3,7,8,9])\n",
+    "v_dim= len(v) #수학의 차원\n",
+    "v_mag = np.linalg.norm(v) #수학적 크기,길이,또는 노름\n",
+    "print(v_dim)\n",
+    "print(v_mag)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e538373f-dcf5-464e-84ad-15448af6f58f",
+   "id": "b8f19afb-5131-4566-b056-d605f4081ef9",
    "metadata": {},
    "outputs": [],
    "source": []
