--- a/src/linear_algebra/ch1.ipynb
+++ b/src/linear_algebra/ch1.ipynb
@@ -270,9 +270,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Rust",
+   "language": "rust",
+   "name": "rust"
   },
   "language_info": {
    "codemirror_mode": {
@@ -281,7 +281,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
+   "name": "rust",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.6"
